--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,77 @@
 .main {
-    margin-top: 35px;
+  margin-top: 35px;
 
-    .leftmainbar {
-        margin: 0 0 20px 0;
+  .leftmainbar {
+    margin: 0 0 20px 0;
 
-        .box {
-            display: flex;
-            align-items: center;
-            padding: 13px;
-        }
-
-        .postbutton {
-            width: 100%;
-            padding: 14px;
-            border: 0;
-            background-color: #1D9Df0;
-            border-radius: 10px;
-            font-size: medium;
-            font-weight: 600;
-        }
-
-        span {
-            margin: 0 0 0 20px;
-            font-size: 20px;
-            font-weight: 500;
-        }
+    .box {
+      display: flex;
+      align-items: center;
+      padding: 13px;
     }
-}
 
-
-.leftmainbar :hover.box {
-    background: rgb(170, 167, 167);
-    transition: .8s;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.home {
-    display: flex;
-    justify-content: space-between;
-    margin: auto !important;
-    width: 70%;
-}
-
-.postmain {
-    .postsecond {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .postbutton {
+      width: 100%;
+      padding: 14px;
+      border: 0;
+      background-color: #1d9df0;
+      border-radius: 10px;
+      font-size: medium;
+      font-weight: 600;
     }
 
     span {
-        font-size: 20px;
-        font-weight: 500;
+      margin: 0 0 0 20px;
+      font-size: 20px;
+      font-weight: 500;
     }
+  }
+}
+
+.leftmainbar :hover.box {
+  background: rgb(170, 167, 167);
+  transition: 0.8s;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.home {
+  display: flex;
+  justify-content: space-between;
+  margin: auto !important;
+  width: 70%;
+}
+
+.postmain {
+  .postsecond {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  span {
+    font-size: 20px;
+    font-weight: 500;
+  }
+}
+
+.dhoni-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+}
+.main-flex{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.follow-btn{
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    padding: 5px 15px;
+}
+.footer-text{
+    font-size: 13px;
+    margin: 4px;
 }
