--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,7 @@
 
 .home {
   display: flex;
-  justify-content: space-between;
-  margin: auto !important;
-  width: 70%;
+  justify-content: center;
 }
 
 .postmain {
