--- a/src/Page/Profile.css
+++ b/src/Page/Profile.css
@@ -1,19 +1,23 @@
+.profile-main {
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+}
 .profile-main-box {
   display: flex;
   align-items: center;
-  background-color: rgb(43, 39, 39);
+  background-color: rgb(123, 117, 117);
   position: fixed;
   top: 0;
-  width: 748px;
+  width: 745px;
   z-index: 999;
 }
 .name-text {
-  color: white;
+  color: black;
   font-weight: 700;
   font-size: 24px;
 }
 .post-text {
-  color: rgb(121, 113, 113);
+  color: black;
 }
 .arrow-icon {
   padding-left: 15px;
@@ -29,20 +33,16 @@
   position: absolute;
   top: 21%;
   left: 25%;
-  background-color: white;
-  color: black;
-  border: 2px solid black;
-}
-.avatar-second-box {
-  background-color: black;
-  /* height: 300px; */
+  background-color: rgb(43, 39, 39);
+  color: white;
+  border: 3px solid white;
 }
 .main-profile-button {
   text-align: end;
 }
 .profile-button {
-  border: 1px solid white !important;
-  color: white !important;
+  border: 1px solid black !important;
+  color: black !important;
   font-weight: 600 !important;
   border-radius: 20px !important;
   margin-top: 15px !important;
@@ -50,14 +50,14 @@
   text-transform: capitalize !important;
 }
 .profile-rahul-text {
-  color: white;
+  color: black;
   font-weight: 700;
   font-size: 23px;
   padding-top: 10px;
   padding-left: 25px;
 }
 .profile-username-text {
-  color: rgb(121, 113, 113);
+  color: black;
   padding-left: 25px;
 }
 .date-joined-flex {
@@ -66,48 +66,35 @@
   padding-top: 10px;
 }
 .date-joined-calender {
-  color: white;
+  color: black;
   padding-left: 25px;
 }
 .date-joined-text {
-  color: rgb(121, 113, 113);
+  color: black;
   padding-left: 8px;
 }
 .following-flex {
   display: flex;
-  color: white;
+  color: black;
   margin-top: 10px;
+  /* font-weight: 600; */
 }
 .following {
   padding-left: 25px;
-  color: rgb(121, 113, 113);
+  color: black;
 }
 .followers {
   padding-left: 10px;
-  color: rgb(121, 113, 113);
+  color: black;
 }
 .one {
   padding-right: 3px;
-  color: white;
-}
-.profile-header {
-  color: rgb(121, 113, 113);
-  display: flex;
-  justify-content: space-around;
-  margin-top: 30px;
-  border-bottom: 1px solid rgb(121, 113, 113);
-}
-.profile-header-li {
-  padding-bottom: 15px;
-}
-.profile-header-li:hover {
-  font-weight: 500;
-  color: white;
-  border-bottom: 3px solid royalblue;
+  color: black;
+  font-weight: 700;
 }
 .post-box {
   background-color: black;
-  color: white;
+  color: black;
 }
 .highlight {
   font-size: 35px;
@@ -143,12 +130,49 @@
   text-transform: capitalize !important;
   padding: 10px 20px !important;
 }
-.post-height{
+.post-height {
   height: 550px;
 }
-.flex{
+.profile-header {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  color: white;
+  /* color: white; */
+  margin-top: 30px;
+  border-bottom: 1px solid rgb(121, 113, 113);
+  padding-bottom: 10px;
+}
+.profilecom-textone {
+  /* color: white; */
+  font-size: 38px;
+  font-weight: 700;
+  width: 618px;
+  padding-left: 195px;
+  line-height: 100%;
+  margin-top: 25px;
+}
+.profilecom-texttwo {
+  color: rgb(121, 113, 113);
+  padding-left: 195px;
+  width: 537px;
+  margin-top: 15px;
+}
+.profilecom-btn {
+  background-color: black !important;
+  color: white !important;
+  text-transform: capitalize !important;
+  padding: 10px 25px 10px 25px !important;
+  border-radius: 40px !important;
+  border: none !important;
+  margin-left: 190px !important;
+  margin-top: 20px !important;
+  font-size: 18px !important;
+  font-weight: 500 !important;
+}
+.profilecom-main {
+  height: 480px;
+}
+.profileheader-text {
+  cursor: pointer;
+  font-weight: 600;
 }
