notfication and massges page

--- a/src/App.css
+++ b/src/App.css
@@ -187,3 +187,18 @@
 .maincheckbox {
   padding-top: 20px;
 }
+.more{
+  color: black !important;
+  text-transform: capitalize !important;
+  font-size: 19px !important;
+}
+.modalopen-sidebar{
+  display: flex;
+  align-items: center;
+}
+.premium{
+  padding-left: 10px;
+  line-height: 50px;
+  font-size: 20px;
+  font-weight: 600;
+}
