--- a/src/Page/Profile.css
+++ b/src/Page/Profile.css
@@ -1,15 +1,16 @@
 .profile-main {
   border-left: 2px solid black;
   border-right: 2px solid black;
+  /* width: 100%; */
 }
 .profile-main-box {
   display: flex;
   align-items: center;
   background-color: rgb(123, 117, 117);
-  position: fixed;
-  top: 0;
-  width: 745px;
-  z-index: 999;
+  /* position: fixed; */
+  /* top: 0; */
+  width: 100%;
+  /* z-index: 999; */
 }
 .name-text {
   color: black;
@@ -26,20 +27,27 @@
   padding-left: 25px;
 }
 .avatar-box {
-  background-color: rgb(161, 168, 166);
-  height: 200px;
+  /* background-color: rgb(161, 168, 166); */
+  /* height: 200px; */
+  margin-top: 30px;
+  margin-left: 30px;
+}
+.avatar-btn-flex{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .avatar-position {
-  position: absolute;
-  top: 21%;
-  left: 25%;
+  /* position: absolute; */
+  /* top: 21%; */
+  /* left: 25%; */
   background-color: rgb(43, 39, 39);
   color: white;
   border: 3px solid white;
 }
-.main-profile-button {
+/* .main-profile-button {
   text-align: end;
-}
+} */
 .profile-button {
   border: 1px solid black !important;
   color: black !important;
