--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@
   position: absolute;
   background-color: rgb(65, 47, 47);
   height: 5%;
-  width: 100%;
+  /* width: 100%; */
   display: none;
 }
 .border-line ul li:hover::before {
@@ -138,7 +138,7 @@
 }
 .searchbar-color {
   background-color: lightblue;
-  width: 638px;
+  /* width: 638px; */
 }
 .searchbar-fix {
   background-color: whitesmoke;
