--- a/src/Page/Profile.css
+++ b/src/Page/Profile.css
@@ -1,7 +1,8 @@
 .profile-main {
-  border-left: 2px solid black;
-  border-right: 2px solid black;
+  /* border-left: 2px solid black; */
+  /* border-right: 2px solid black; */
   /* width: 100%; */
+  border: 1px solid black;
 }
 .profile-main-box {
   display: flex;
