--- a/src/components/Feed/ShowComments.css
+++ b/src/components/Feed/ShowComments.css
@@ -1,22 +1,58 @@
-.tweet-comments {
-  margin-bottom: 20px;
+.comment-container {
+  padding: 10px;
+  border-radius: 13px;
+  /* box-shadow: 9px -2px 15px 2px rgba(0, 0, 0, 0.1);  */
 }
 
 .comment-item {
-  display: flex;
-  align-items: flex-start;
-  margin-bottom: 10px;
+  list-style: none;
+  margin-bottom: 15px;
+  background-color: #fff; 
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 5px -9px 14px 0px rgba(0, 0, 0, 0.1); 
 }
 
 .comment-avatar {
-  flex-shrink: 0;
   margin-right: 10px;
 }
 
 .comment-content {
-  flex-grow: 1;
+  margin-left: 20px;
+}
+
+.comment-author h2 {
+  margin: 0;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.comment-author p {
+  margin: 0;
+  font-size: 14px;
+  color: #666;
 }
 
 .comment-text {
-  margin: 0;
+  margin: 5px 0;
+  font-size: 14px;
+}
+
+.comment-actions {
+  margin-top: 5px;
+}
+
+.comment-actions button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+.comment-actions button:focus {
+  outline: none;
+}
+
+.comment-actions button:hover {
+  color: #007bff;
 }
