--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   margin-top: 35px;
 
   .leftmainbar {
-    margin: 0 0 20px 0;
+    margin: 0 0 16px 0;
 
     .box {
       display: flex;
@@ -197,6 +197,7 @@
 .avatar-profile-main {
   display: flex;
   align-items: center;
+  margin-top: 30px;
 }
 .leftmainbar_logout .box {
   display: flex;
